--- a/index.html
+++ b/index.html
@@ -346,10 +346,9 @@
 							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-3rd-season"><img class="tile-image" src="https://media.kitsu.io/anime/46729/poster_image/large-4b30dd0d5a2559d47365fa80caa9a923.jpeg" alt="That Time I Got Reincarnated as a Slime Season 3"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/Kimetsu-no-Yaiba-Hashira-Geikohen"><img class="tile-image" src="https://media.kitsu.io/anime/47635/poster_image/large-4211877e3a64e0f5beacfaca550aae16.jpeg" alt="Demon Slayer: Hashira Training Arc"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/boku-no-hero-academia-7th-season"><img class="tile-image" src="https://media.kitsu.io/anime/47232/poster_image/large-e72a84111240e5a313fca1a65341303d.jpeg" alt="Hero Academia Season 7"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/kaijuu-8-gou"><img class="tile-image" src="https://media.kitsu.io/anime/46300/poster_image/large-31cc66fd5854cc555d496ced7ab40c31.jpeg" alt="Kaiju No.8"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/Mushoku-Tensei-II-Isekai-Ittara-Honki-Dasu-Part-2"><img class="tile-image" src="https://media.kitsu.io/anime/47694/poster_image/large-b5bde230c0bff92d223d3f792cbd462a.jpeg" alt="Jobless Reincarnation Season 2 Part 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/tsuki-ga-michibiku-isekai-douchuu-2"><img class="tile-image" src="https://media.kitsu.io/anime/45235/poster_image/large-a9217949be9a05b93beba240ee401d36.jpeg" alt="Tsukimichi -Moonlit Fantasy- 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/yuru-camp-3"><img class="tile-image" src="https://media.kitsu.io/anime/46649/poster_image/large-6671ae841d0897a9f999cb9417f7695b.jpeg" alt="Laid Back Camp 3"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/shikanoko-nokonoko-koshitantan"><img class="tile-image" src="https://media.kitsu.io/anime/48618/poster_image/large-ea22ba9273d97b476842c3647d4172da.jpeg" alt="My Deer Friend Nokotan"></img></a>
 							
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
@@ -394,8 +393,7 @@
 							<a class="tile" href="https://kitsu.io/anime/boku-no-kokoro-no-yabai-yatsu"><img class="tile-image" src="https://media.kitsu.io/anime/46299/poster_image/large-116b49ab958abf27bbbb38e9215a0fe1.jpeg" alt="The Dangers in My Heart"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/mahoutsukai-no-yome-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/46436/poster_image/large-4143acc41341b91804009d0e7508dc60.jpeg" alt="The Ancient Magus' Bride Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/dark-gathering"><img class="tile-image" src="https://media.kitsu.io/anime/46279/poster_image/large-7f454e242f8934b587b4724d75f5e6f0.jpeg" alt="Dark Gathering"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/made-in-abyss-retsujitsu-no-ougonkyou"><img class="tile-image" src="https://media.kitsu.io/anime/42951/poster_image/large-8fd6abf81d8c4223a61bd0e4192eba04.jpeg" alt="Made in Abyss: The Golden City of the Scorching Sun"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/hananoi-kun-to-koi-no-yamai"><img class="tile-image" src="https://media.kitsu.io/anime/47574/poster_image/large-154e84e8ef074fa1fa26d8b74ac845ba.jpeg" alt="A Condition Called Love"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/made-in-abyss-retsujitsu-no-ougonkyou"><img class="tile-image" src="https://media.kitsu.io/anime/42951/poster_image/large-8fd6abf81d8c4223a61bd0e4192eba04.jpeg" alt="Made in Abyss: The Golden City of the Scorching Sun"></img></a>							
 							<!--
 								<a class="tile" href="https://kitsu.io/anime/rurouni-kenshin-meiji-kenkaku-romantan-2023"><img class="tile-image" src="https://media.kitsu.io/anime/45616/poster_image/large-1881293614632c347d895db0315419a7.jpeg" alt="Rurouni Kenshin"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/lovely-complex"><img class="tile-image" src="https://media.kitsu.io/anime/1833/poster_image/large-892da306ae6f1ec03daefae58c45138b.jpeg" alt="Lovely Complex"></img></a>
@@ -416,13 +414,13 @@
 
 						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
 						<div class="tiled-list scrolling-tiled-list">
-							<a class="tile" href="https://kitsu.io/anime/karakai-jouzu-no-takagi-san-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42110/large.jpg" alt="Teasing Master Takagi-san 2"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/lv2-kara-cheat-datta-moto-yuusha-kouho-no-mattari-isekai-life"><img class="tile-image" src="https://media.kitsu.io/anime/48125/poster_image/large-ef5945662e78d142bfc45726a0b506e0.jpeg" alt="Chillin' in Another World with Level 2 Super Cheat Powers"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/karakai-jouzu-no-takagi-san-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42110/large.jpg" alt="Teasing Master Takagi-san 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/helck"><img class="tile-image" src="https://media.kitsu.io/anime/45876/poster_image/large-2b41b177707ddf123c3633f6bb641e4d.jpeg" alt="Helck"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/yoru-no-kurage-wa-oyogenai"><img class="tile-image" src="https://media.kitsu.io/anime/47233/poster_image/large-b4cf1ec48d885cef74ff3bd42b091912.jpeg" alt="Jellyfish Can't Swim in the Night"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/sentai-daishikkaku"><img class="tile-image" src="https://media.kitsu.io/anime/46840/poster_image/large-469f7caa559e882eb322d55e677c3fea.jpeg" alt="Go! Go! Loser Ranger!"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/yozakura-san-chi-no-daisakusen"><img class="tile-image" src="https://media.kitsu.io/anime/46869/poster_image/large-1dce6f6d3b1efb86e8222632eba595ee.jpeg" alt="Mission: Yozakura Family"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/Dead-Dead-Demons-Dededededestruction-Zenshou"><img class="tile-image" src="https://media.kitsu.io/anime/45989/poster_image/large-501cec7dd2c71af240b02745256ade91.jpeg" alt="Dead Dead Demon's Dededede Destruction"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kono-sekai-wa-fukanzen-sugiru"><img class="tile-image" src="https://media.kitsu.io/anime/47236/poster_image/large-8f2f4bb1adabfd4d8fb75a17cfee25f0.jpeg" alt="Quality Assurance in Another World"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/isekai-yururi-kikou-kosodate-shinagara-boukensha-shimasu"><img class="tile-image" src="https://media.kitsu.io/anime/48390/poster_image/large-b199b98d15d371a75711b09c26eb001c.jpeg" alt="Raising Kids While Adventuring"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Binge Watching -->
 
@@ -441,10 +439,9 @@
 							<a class="tile" href="https://kitsu.io/anime/isekai-shikkaku"><img class="tile-image" src="https://media.kitsu.io/anime/46243/poster_image/large-3c0f5639e07a85a1656e22b52483b857.jpeg" alt="No Longer Human…In Another World"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kimi-to-boku-no-saigo-no-senjou-aruiwa-sekai-ga-hajimaru-seisen-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45272/poster_image/large-f358a57b59a2f18765223103a45c1272.jpeg" alt="Our Last Crusade or the Rise of a New World Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/naze-boku-no-sekai-wo-daremo-oboeteinai-no-ka"><img class="tile-image" src="https://media.kitsu.io/anime/47786/poster_image/large-ed6384832e4aad256106735ddc814825.jpeg" alt="Why nobody remembers my world?"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/kono-sekai-wa-fukanzen-sugiru"><img class="tile-image" src="https://media.kitsu.io/anime/47236/poster_image/large-8f2f4bb1adabfd4d8fb75a17cfee25f0.jpeg" alt="Quality Assurance in Another World"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/ore-wa-subete-wo-parry-suru-gyaku-kanchigai-no-sekai-saikyou-wa-boukensha-ni-naritai"><img class="tile-image" src="https://media.kitsu.io/anime/48202/poster_image/large-a044a94c2cc0319f290269422ec5d1bc.jpeg" alt="I Parry Everything"></img></a>
 							<!--
 							<a class="tile" href="https://kitsu.io/anime/gimai-seikatsu"><img class="tile-image" src="https://media.kitsu.io/anime/46276/poster_image/large-79b0d9fa9c7f51c5eb7b384d77eab8ff.jpeg" alt="Days with my Step Sister"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/ore-wa-subete-wo-parry-suru-gyaku-kanchigai-no-sekai-saikyou-wa-boukensha-ni-naritai"><img class="tile-image" src="https://media.kitsu.io/anime/48202/poster_image/large-a044a94c2cc0319f290269422ec5d1bc.jpeg" alt="I Parry Everything"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/bye-bye-earth"><img class="tile-image" src="https://media.kitsu.io/anime/46764/poster_image/large-9fbae82f268cf9a2478d76e67804cad4.jpeg" alt="Bye Bye, Earth"></img></a>
 							-->
 						</div><!-- tiled-list -->
@@ -524,9 +521,10 @@
 								<a class="tile" href="https://kitsu.io/anime/fate-zero"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Fate-Zero_large.jpg" alt="Fate Zero"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/one-punch-man"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/One-Punch-Man_large.jpg" alt="One-Punch Man"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/mob-psycho-100"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Mob-Psycho-100_large.jpeg" alt="Mob Psycho 100"></img></a>								
-								<a class="tile" href="https://kitsu.io/anime/shangri-la-frontier"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Shangri-La-Frontier_Large.jpeg" alt="Shangri-La Frontier"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/kaijuu-8-gou"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Kaiju_No8.jpeg" alt="Kaiju Number 8"></img></a>
 								<!--
 									<a class="tile" href="https://kitsu.io/anime/attack-on-titan"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Attack-on-Titan_large.jpg" alt="Attack on Titan"></img></a>
+									<a class="tile" href="https://kitsu.io/anime/shangri-la-frontier"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Shangri-La-Frontier_Large.jpeg" alt="Shangri-La Frontier"></img></a>
 								-->
 							</div>
 						</div><!--Action-->
@@ -1009,6 +1007,15 @@
 							</div>
 						</div>
 					</a>
+					<a class="lf-link" href="https://www.reddit.com/r/Animedubs/comments/143eu03/when_is_anime_going_to_be_dubbed_where_can_i/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/eng-dub-d-icon.png"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">When is [Anime] getting dubbed?</span>
+								<span class="lf-handle"><i class="fa-brands fa-reddit-alien lf-handle-icon"></i> /r/Animedubs</span>
+							</div>
+						</div>
+					</a>					
 					<a class="lf-link" href="https://myanimelist.net/profile/Universalx">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/mal-icon.png"></img>
@@ -1017,16 +1024,18 @@
 								<span class="lf-handle"><i class="fa-solid fa-link lf-handle-icon"></i> @Universalx</span>
 							</div>
 						</div>
-					</a>						
-					<a class="lf-link" href="https://www.reddit.com/r/Animedubs/wiki/index">
-						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/eng-dub-d-icon.png"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">r/AnimeDubs Links</span>
-								<span class="lf-handle"><i class="fa-brands fa-reddit-alien lf-handle-icon"></i> /r/Animedubs/wiki/index</span>
-							</div>
-						</div>
 					</a>
+					<!-- 
+						<a class="lf-link" href="https://www.reddit.com/r/Animedubs/wiki/index">
+							<div class="lf-item-container">								
+								<img loading="Lazy" class="lf-image" src="assets/images/icons/eng-dub-d-icon.png"></img>
+								<div class="lf-text">
+									<span class="lf-displayname">r/AnimeDubs Links</span>
+									<span class="lf-handle"><i class="fa-brands fa-reddit-alien lf-handle-icon"></i> /r/Animedubs/wiki/index</span>
+								</div>
+							</div>
+						</a>
+					-->
 				</div>				
 				<div class="lf-list">
 					<h3 class="lf-heading">For Collections</h3>
